Correct footer padding and align items
Fix padding-top value and update alignment property.

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav a:hover{
 }
 footer{
     padding: 1px;
-    padding-top: 200px:
+    padding-top: 500px:
     text-align: left;
     font-size: smaller;
 }
@@ -233,7 +233,7 @@ nav a.active{
   outline: none;
 }
 .edu-score-tag{
-    align-items: right;
+    text-items: right;
 }
 .sem-status{
     font-size: 12px;
